# neural_networks_chomsky_hierarchy

./: pyproject.toml
experiments/: constants.py  example.py  range_evaluation.py  training.py  utils.py
src/chomsky/models/: rnn.py
src/chomsky/tasks/cs/: binary_addition.py  binary_multiplication.py  bucket_sort.py  compute_sqrt.py  duplicate_string.py  missing_duplicate_string.py  odds_first.py
src/chomsky/tasks/dcf/: modular_arithmetic_brackets.py  reverse_string.py  solve_equation.py  stack_manipulation.py
src/chomsky/tasks/regular/: cycle_navigation.py  even_pairs.py  modular_arithmetic.py  parity_check.py
