[project]
name = "chomsky"
version = "0.1.0"
description = "Neural networks chomsky hierarchy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.4.0",
    "chex>=0.1.91",
    "dm-tree>=0.1.10",
    "einshape",
    "equinox>=0.13.6",
    "jax>=0.7.2",
    "jaxtyping>=0.3.9",
    "numpy>=2.0",
    "optax>=0.2.8",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
einshape = { git = "https://github.com/deepmind/einshape" }
